fixed html umlaut and alignment of chat bubbles

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -28,7 +28,7 @@
 
 body {
     background: var(--background-color);
-    font-family: Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -50,9 +50,10 @@ button[type="button"] {
     background: #6c757d;
 }
 
-button[type="submit"] {
-    background: #f4f4f4;;
+.message-form button  {
+    background: #f4f4f4;
 }
+
 button[type="button"]:hover {
     background: #5a6268;
 }
@@ -104,6 +105,8 @@ img {
     padding: 20px;
     scroll-behavior: smooth;
 }
+
+
 
 .chat-room {
     display: flex;
@@ -189,6 +192,7 @@ input {
     background: #f4f4f4;
     border-top: 1px solid var(--border-color);
     display: flex;
+    align-items: center;
     padding: 10px;
 }
 
@@ -198,6 +202,7 @@ input {
     flex: 1;
     margin-right: 10px;
     padding: 10px;
+    height: 20%;
 }
 
 .messages {
@@ -295,6 +300,16 @@ input {
     background-color: #89e4f0; /* Hellblauer Hintergrund für die Blase */
     color: #000;
     position: relative;
+    word-wrap: break-word;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+.own-message-bubble {
+    align-self: flex-end;
+    max-width: 70%;
+    padding: 10px 15px;
+    border-radius: 15px;
+    background-color: #89f0c7;
+    color: #000;
     word-wrap: break-word;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
